--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ repositories {
 
 
 dependencies {
+	compileOnly 'org.projectlombok:lombok:1.18.2'
 	implementation('org.springframework.boot:spring-boot-starter-actuator')
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	implementation('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
